--- a/package.json
+++ b/package.json
@@ -8,23 +8,30 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.2",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2",
     "sort-by": "^1.2.0",
+    "ts-jest": "^29.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tes 2": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
